==> feixingzhe9/Ultrasonic-/platforms/MCUs/STM32F1xx/peripherals/platform_flash.c <==
#include "platform_peripheral.h"
#define WRITE_PROTECTION_DISABLE
#define ADDR_FLASH_SECTOR_0     ((uint32_t)0x08000000) /* Base @ of Sector 0, page 0 to 3: 4 Kbyte */
#define ADDR_FLASH_SECTOR_1     ((uint32_t)0x08001000) /* Base @ of Sector 1, page 4 to 7: 4 Kbyte */
#define ADDR_FLASH_SECTOR_2     ((uint32_t)0x08002000) /* Base @ of Sector 2, page 8 to 11: 4 Kbyte */
#define ADDR_FLASH_SECTOR_3     ((uint32_t)0x08003000) /* Base @ of Sector 3, page 12 to 15: 4 Kbyte */
#define ADDR_FLASH_SECTOR_4     ((uint32_t)0x08004000) /* Base @ of Sector 4, page 16 to 19: 4 Kbyte */
#define ADDR_FLASH_SECTOR_5     ((uint32_t)0x08005000) /* Base @ of Sector 5, page 20 to 23: 4 Kbyte */
#define ADDR_FLASH_SECTOR_6     ((uint32_t)0x08006000) /* Base @ of Sector 6, page 24 to 27: 4 Kbyte */
#define ADDR_FLASH_SECTOR_7     ((uint32_t)0x08007000) /* Base @ of Sector 7, page 28 to 31: 4 Kbyte */
#define ADDR_FLASH_SECTOR_8     ((uint32_t)0x08008000) /* Base @ of Sector 8, page 32 to 35: 4 Kbyte */
#define ADDR_FLASH_SECTOR_9     ((uint32_t)0x08009000) /* Base @ of Sector 9, page 36 to 39: 4 Kbyte */
#define ADDR_FLASH_SECTOR_10    ((uint32_t)0x0800A000) /* Base @ of Sector 10, page 40 to 43: 4 Kbyte */
#define ADDR_FLASH_SECTOR_11    ((uint32_t)0x0800B000) /* Base @ of Sector 11, page 44 to 47: 4 Kbyte */
#define ADDR_FLASH_SECTOR_12    ((uint32_t)0x0800C000) /* Base @ of Sector 12, page 48 to 51: 4 Kbyte */

OSStatus internalFlashInitialize( void )
{
  platform_log_trace();
  
  /* Unlock the Flash to enable the flash control register access *************/ 
  HAL_FLASH_Unlock();  

  /* Clear pending flags (if any) */
  __HAL_FLASH_CLEAR_FLAG( FLASH_FLAG_EOP | FLASH_FLAG_PGERR | FLASH_FLAG_WRPERR );
  return kNoErr;    
}

OSStatus internalFlashErase(uint32_t StartAddress, uint32_t EndAddress)
{
  platform_log_trace();
  OSStatus err = kNoErr;
  uint32_t StartPageAddredss, EndPagesAddress, i = 0, j = 0, totalPages = 0;
  static FLASH_EraseInitTypeDef EraseInitStruct;
  uint32_t PAGEError = 0;
  
  StartPageAddredss = _GetPageAddress( StartAddress );
  EndPagesAddress = _GetPageAddress( EndAddress );
  totalPages = (EndPagesAddress - StartPageAddredss) / FLASH_PAGE_SIZE + 1;
  
  for( i = 0; i < totalPages; i++ )
  {
    for( j = StartPageAddredss + i*FLASH_PAGE_SIZE; j <= StartPageAddredss + (i+1)*FLASH_PAGE_SIZE - 1; j+=8 )
    {
      if( (*(uint32_t *)(j))!=0xFFFFFFFF )
        break;
    }
    if( j > StartPageAddredss + (i+1)*FLASH_PAGE_SIZE - 1 )
      continue;
    /* Fill EraseInit structure*/
    EraseInitStruct.TypeErase   = FLASH_TYPEERASE_PAGES;
    EraseInitStruct.PageAddress = StartPageAddredss + i * FLASH_PAGE_SIZE;
    EraseInitStruct.NbPages     = 1;    
    require_action(HAL_FLASHEx_Erase(&EraseInitStruct, &PAGEError) == HAL_OK, exit, err = kWriteErr);
  }  
  
exit:
  return err;
}

OSStatus internalFlashWrite(volatile uint32_t* FlashAddress, uint32_t* Data ,uint32_t DataLength)
{
  platform_log_trace();
  OSStatus err = kNoErr;
  uint32_t i = 0;
  uint32_t dataInRam;
  uint32_t DataLength32 = DataLength;

  if( *FlashAddress%2){
    err = kNoAddressAckErr;
    platform_log("write address @%08x not align",*FlashAddress);
    *FlashAddress += 1;
    goto exit;
  }
  /*First bytes that are not 32bit align*/
  if(*FlashAddress%4){
    require_action(HAL_FLASH_Program(FLASH_TYPEPROGRAM_HALFWORD, *FlashAddress, *(uint16_t *)Data) == HAL_OK, exit, err = kWriteErr);
    require_action(*(uint16_t*)*FlashAddress == *(uint16_t *)Data, exit, err = kChecksumErr);    
    DataLength32 = DataLength - 2;
    *FlashAddress += 2;
    Data = (uint32_t *)((uint32_t)Data + 2);
  }
  
  /*Program flash by words*/
  for (i = 0; (i < DataLength32/4) && (*FlashAddress <= (FLASH_END_ADDRESS-3)); i++)
  {
    /* Device voltage range supposed to be [2.7V to 3.6V], the operation will
    be done by word */ 
    dataInRam = *Data;
    require_action(HAL_FLASH_Program(FLASH_TYPEPROGRAM_WORD, *FlashAddress, dataInRam) == HAL_OK, exit, err = kWriteErr); 
    require_action(*(uint32_t*)*FlashAddress == dataInRam, exit, err = kChecksumErr); 
    /* Increment FLASH destination address */
    *FlashAddress += 4;
    Data = (uint32_t *)((uint32_t)Data + 4);
  }
  
  /*Last bytes that cannot be write by a 32 bit word*/
  if( DataLength32 % 4 ) {
    if( DataLength32 % 4 == 1 ) {      
      require_action(HAL_FLASH_Program(FLASH_TYPEPROGRAM_HALFWORD, *FlashAddress, ((uint16_t)*Data & 0x00FF) | 0xFF00) == HAL_OK, exit, err = kWriteErr);
      require_action(*(uint16_t*)*FlashAddress == ((uint16_t)*Data & 0x00FF) | 0xFF00, exit, err = kChecksumErr); 
      *FlashAddress += 1;
      Data = (uint32_t *)((uint32_t)Data + 1);
    }
    else if( DataLength32 % 4 == 2 ) {
      require_action(HAL_FLASH_Program(FLASH_TYPEPROGRAM_HALFWORD, *FlashAddress, (uint16_t)*Data) == HAL_OK, exit, err = kWriteErr);
      require_action(*(uint16_t*)*FlashAddress == *(uint16_t *)Data, exit, err = kChecksumErr); 
      *FlashAddress += 2;
      Data = (uint32_t *)((uint32_t)Data + 2);
    }
    else {
      require_action(HAL_FLASH_Program(FLASH_TYPEPROGRAM_HALFWORD, *FlashAddress, (uint16_t)*Data) == HAL_OK, exit, err = kWriteErr);
      require_action(*(uint16_t*)*FlashAddress == *(uint16_t *)Data, exit, err = kChecksumErr); 
      *FlashAddress += 2;
      Data = (uint32_t *)((uint32_t)Data + 2);
      require_action(HAL_FLASH_Program(FLASH_TYPEPROGRAM_HALFWORD, *FlashAddress, (((uint16_t)*Data) & 0x00FF)  | 0xFF00) == HAL_OK, exit, err = kWriteErr);
      require_action(*(uint16_t*)*FlashAddress == ((uint16_t)*Data & 0x00FF) | 0xFF00, exit, err = kChecksumErr); 
      *FlashAddress += 1;
      Data = (uint32_t *)((uint32_t)Data + 1);
    }
  }
  
exit:
  return err;
}

OSStatus internalFlashFinalize( void )
{
  HAL_FLASH_Lock();
  return kNoErr;
}

OSStatus internalFlashProtect(uint32_t StartAddress, uint32_t EndAddress, bool enable)
{
  OSStatus err = kNoErr;
  FLASH_OBProgramInitTypeDef OptionsBytesStruct; 
  static uint32_t StartSector, EndSector, i = 0;
  bool needupdate = false;
  
  StartSector = _GetWRPSector(StartAddress);
  EndSector = _GetWRPSector(EndAddress);

  /* Get pages write protection status ****************************************/
  HAL_FLASHEx_OBGetConfig( &OptionsBytesStruct );  
  
  for( i = StartSector; i <= EndSector && i != 0; i = i<<1 )
  {
    if( ( enable == true && (OptionsBytesStruct.WRPPage & i) == 0x0 ) ||
        ( enable == false && (OptionsBytesStruct.WRPPage & i) ) ) {
      continue;
    }
    if( needupdate == false){
       /* Unlock the Options Bytes *************************************************/
      HAL_FLASH_OB_Unlock();
      needupdate = true;
    }
    if( enable == true )
    {    
      /* Restore write protected pages */
      OptionsBytesStruct.OptionType   = OPTIONBYTE_WRP;
      OptionsBytesStruct.WRPState     = OB_WRPSTATE_ENABLE;
      OptionsBytesStruct.WRPPage      = i;
      require_action( HAL_FLASHEx_OBProgram(&OptionsBytesStruct) == HAL_OK, exit, err = kWriteErr ); 
    }
    else
    {
       /* Restore write protected pages */
      OptionsBytesStruct.OptionType   = OPTIONBYTE_WRP;
      OptionsBytesStruct.WRPState     = OB_WRPSTATE_DISABLE;
      OptionsBytesStruct.WRPPage      = i;
      require_action( HAL_FLASHEx_OBProgram(&OptionsBytesStruct) == HAL_OK, exit, err = kWriteErr ); 
    }
  }
  if( needupdate == true){
    /* Generate System Reset to load the new option byte values ***************/
    HAL_FLASH_OB_Launch();
    /* Lock the Options Bytes *************************************************/
    HAL_FLASH_OB_Lock();
  }

exit:  
  return err;
}

static uint32_t _GetWRPSector(uint32_t Address)
{
  uint32_t sector = 0;
#if defined(STM32F103xB)  
  sector = ( Address - FLASH_START_ADDRESS ) / (FLASH_PAGE_SIZE * 4);
  return (OB_WRP_PAGES0TO3 << sector);
#elif defined(STM32F103xE)
  if( Address >= ADDR_FLASH_SECTOR_31 )
    return OB_WRP_PAGES62TO255;
  sector = ( Address - FLASH_START_ADDRESS ) / (FLASH_PAGE_SIZE * 2);
  return (OB_WRP_PAGES0TO1 << sector);
#endif
}
